# lombok_next

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: _extends.rs  lib.rs
tests/: getter_test.rs  setter_test.rs
